--- a/main.css
+++ b/main.css
@@ -1,5 +1,16 @@
+:root {
+    --green:#00FF00;
+    --white: #ffffff;
+    --black: #000000;
+}
+/*  */
+* {
+    color:var(--fontColor);
+    font-family: helvetica;
+}
+
 body {
-    font-family:monospace;
+    background-color:var(--bg);
 }
 
 ul {
@@ -10,11 +21,41 @@ li{
     list-style: circle;
 }
 
-.list{
+.list {
     list-style: square;
 }
 
-#msg{
+#msg {
     font-family: monospace;
 }
 
+.light-theme {
+    --bg:var(--green);
+    --fontColor:var(--black);
+    --btnBg:var(--black);
+    --btnFontColor:var(--white);
+
+}
+
+.dark-theme{
+    --bg:var(--black);
+    --fontColor: var(--green);
+    --btnBg:var(--white);
+    --btnFontColor:var(--black);
+}
+
+.btn{
+    position: absolute;
+    top: 28px;
+    left: 250px;
+    height: 50px;
+    width: 50px;
+    border-radius:50%;
+    border:none;
+    color:var(--btnFontColor);
+    background-color:var(--btnBg);
+}
+
+.btn:focus{
+    outline-style: none;
+}
